InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialAccount__c/fields/vlocity_ins__AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AccountNumber__c</fullName>
    <description>The account number of this financial account.</description>
    <label>Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>