InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialAccount__c/fields/vlocity_ins__AccountType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AccountType__c</fullName>
    <description>Formula: the label of the record type. Assumes record types are defined based on types of financial accounts such as investment.</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>