InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialAccount__c/fields/vlocity_ins__ClientAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClientAccountId__c</fullName>
    <description>The primary account holder of this financial account.</description>
    <label>Primary Account Holder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Account</relationshipLabel>
    <relationshipName>FinancialAccount</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>