InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialAccount__c/fields/vlocity_ins__LineOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LineOfBusiness__c</fullName>
    <description>Formula: Line of Business as defined on the associated product.</description>
    <formula>TEXT(vlocity_ins__ProductId__r.vlocity_ins__LineOfBusiness__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line of Business</label>
    <type>Text</type>
</CustomField>