InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialAccount__c/fields/vlocity_ins__ProductCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProductCode__c</fullName>
    <description>Formula: Product code from the associated product.</description>
    <formula>vlocity_ins__ProductId__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Product Code</label>
    <type>Text</type>
</CustomField>