InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialAccount__c/fields/vlocity_ins__ProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(Optional) ID of the financial product which is this financial account.</description>
    <label>Financial Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>FinancialAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>