InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialAccount__c/recordTypes/vlocity_ins__Investment.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Investment</fullName>
    <active>true</active>
    <description>Record type for Investment account type category</description>
    <label>Investment</label>
</RecordType>