InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialAccount__c/listViews/vlocity_ins__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ins__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ins__AccountNumber__c</columns>
    <columns>vlocity_ins__AmountAvailableForWithdrawal__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>